Categorised View tweaks. Verdant Refuge updated.

--- a/Artifact2/index.html
+++ b/Artifact2/index.html
@@ -93,47 +93,57 @@
                 <div class="CVCHeader">▨ Creeps</div>
                 <div class="CVCHeader">▪ Spells</div>
                 <div class="CVCHeader">▩ Improvements</div>
-                <div class="CVCHeader">▦ Items</div>
+                <div class="CVCHeader">▣ Weapons</div>
                 <div class="clear"></div>
-                <div id="CVCRedOuterContainer">
-                    <div id="CVCRedHeroes" class="CVCInnerContainer"></div>
-                    <div id="CVCRedCreeps" class="CVCInnerContainer"></div>
-                    <div id="CVCRedSpells" class="CVCInnerContainer"></div>
-                    <div id="CVCRedImp" class="CVCInnerContainer"></div>
-                    <div id="CVCWeapons" class="CVCInnerContainer"></div>
-                    <div class="clear"></div>
+
+                <div class="CVCOuterContainer80">
+                    <div id="CVCRedOuterContainer">
+                        <div id="CVCRedHeroes" class="CVCInnerContainer"></div>
+                        <div id="CVCRedCreeps" class="CVCInnerContainer"></div>
+                        <div id="CVCRedSpells" class="CVCInnerContainer"></div>
+                        <div id="CVCRedImp" class="CVCInnerContainer"></div>
+                        <div class="clear"></div>
+                    </div>
+                    <div id="CVCBlueOuterContainer">
+                        <div id="CVCBlueHeroes" class="CVCInnerContainer"></div>
+                        <div id="CVCBlueCreeps" class="CVCInnerContainer"></div>
+                        <div id="CVCBlueSpells" class="CVCInnerContainer"></div>
+                        <div id="CVCBlueImp" class="CVCInnerContainer"></div>
+                        <div class="clear"></div>
+                    </div>
+                    <div id="CVCBlackOuterContainer">
+                        <div id="CVCBlackHeroes" class="CVCInnerContainer"></div>
+                        <div id="CVCBlackCreeps" class="CVCInnerContainer"></div>
+                        <div id="CVCBlackSpells" class="CVCInnerContainer"></div>
+                        <div id="CVCBlackImp" class="CVCInnerContainer"></div>
+                        <div class="clear"></div>
+                    </div>
+                    <div id="CVCGreenOuterContainer">
+                        <div id="CVCGreenHeroes" class="CVCInnerContainer"></div>
+                        <div id="CVCGreenCreeps" class="CVCInnerContainer"></div>
+                        <div id="CVCGreenSpells" class="CVCInnerContainer"></div>
+                        <div id="CVCGreenImp" class="CVCInnerContainer"></div>
+                        <div class="clear"></div>
+                    </div>
+                    <div id="CVCColourlessOuterContainer">
+                        <div id="CVCColourlessHeroes" class="CVCInnerContainer"></div>
+                        <div id="CVCColourlessCreeps" class="CVCInnerContainer"></div>
+                        <div id="CVCColourlessSpells" class="CVCInnerContainer"></div>
+                        <div id="CVCColourlessImp" class="CVCInnerContainer"></div>
+                        <div class="clear"></div>
+                    </div>
                 </div>
-                <div id="CVCBlueOuterContainer">
-                    <div id="CVCBlueHeroes" class="CVCInnerContainer"></div>
-                    <div id="CVCBlueCreeps" class="CVCInnerContainer"></div>
-                    <div id="CVCBlueSpells" class="CVCInnerContainer"></div>
-                    <div id="CVCBlueImp" class="CVCInnerContainer"></div>
-                    <div id="CVCArmor" class="CVCInnerContainer"></div>
-                    <div class="clear"></div>
+                <div class="CVCOuterContainer20">
+                    <div id="CVCWeapons" class="CVCInnerContainerItems"></div>
+                    <div class="CVCHeaderItems">▤ Armor</div>
+                    <div id="CVCArmor" class="CVCInnerContainerItems"></div>
+                    <div class="CVCHeaderItems">▥ Accessories</div>
+                    <div id="CVCAcc" class="CVCInnerContainerItems"></div>
+                    <div class="CVCHeaderItems">▦ Consumables</div>
+                    <div id="CVCCon" class="CVCInnerContainerItems"></div>
                 </div>
-                <div id="CVCBlackOuterContainer">
-                    <div id="CVCBlackHeroes" class="CVCInnerContainer"></div>
-                    <div id="CVCBlackCreeps" class="CVCInnerContainer"></div>
-                    <div id="CVCBlackSpells" class="CVCInnerContainer"></div>
-                    <div id="CVCBlackImp" class="CVCInnerContainer"></div>
-                    <div id="CVCAcc" class="CVCInnerContainer"></div>
-                    <div class="clear"></div>
-                </div>
-                <div id="CVCGreenOuterContainer">
-                    <div id="CVCGreenHeroes" class="CVCInnerContainer"></div>
-                    <div id="CVCGreenCreeps" class="CVCInnerContainer"></div>
-                    <div id="CVCGreenSpells" class="CVCInnerContainer"></div>
-                    <div id="CVCGreenImp" class="CVCInnerContainer"></div>
-                    <div id="CVCCon" class="CVCInnerContainer"></div>
-                    <div class="clear"></div>
-                </div>
-                <div id="CVCColourlessOuterContainer">
-                    <div id="CVCColourlessHeroes" class="CVCInnerContainer"></div>
-                    <div id="CVCColourlessCreeps" class="CVCInnerContainer"></div>
-                    <div id="CVCColourlessSpells" class="CVCInnerContainer"></div>
-                    <div id="CVCColourlessImp" class="CVCInnerContainer"></div>
-                    <div class="clear"></div>
-                </div>
+                <div class="clear"></div>
+
             </div>
 
             <div id="CardPreviewTooltip" class="CardContainerMiniPreview">&nbsp;</div>
