--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         }
     </style>
     <script>
-        window.location = "./Artifact2"; 
+        window.location = "https://thinkartifact.com"; 
     </script>
 </head>
 
 <body>
     <div id="Main">
         <div class="Link">
-            <a href="./Artifact2"><img src="Images/Artifact2Link_1.png"></div></a>
+            <a href="https://thinkartifact.com"><img src="Images/Artifact2Link_1.png"></div></a>
         </div>
     </div>
 </body>
